[gd_scene load_steps=10 format=3 uid="uid://dixbs6v2fhdah"]

[ext_resource type="Script" uid="uid://d020l5unq5vlj" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://dx5f8g8tm8ank" path="res://assets/player.png" id="2_g2els"]
[ext_resource type="Texture2D" uid="uid://dq2neit3o707r" path="res://assets/radar_radius.png" id="3_qhqgy"]

[sub_resource type="Animation" id="Animation_qhqgy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "absorbing"
length = 0.5
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_g2els"]
resource_name = "move"
length = 0.5
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dqkch"]
_data = {
&"RESET": SubResource("Animation_qhqgy"),
&"absorbing": SubResource("Animation_dqkch"),
&"move": SubResource("Animation_g2els")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_qhqgy"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_g2els"]
radius = 60.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_g2els")
speed = 40.0
distortion_limit = 220.0
pulse_duration = 5.0
radar_cooldown = 7.0
radar_charges = 50

[node name="AbsorbTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_g2els")
hframes = 4
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dqkch")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qhqgy")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(6, 6)

[node name="RadarArea" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="RadarArea"]
shape = SubResource("CircleShape2D_g2els")

[node name="PulseDurationTimer" type="Timer" parent="RadarArea"]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="RadarArea"]
one_shot = true

[node name="RadarSprite2D" type="Sprite2D" parent="RadarArea"]
visible = false
texture = ExtResource("3_qhqgy")

[connection signal="timeout" from="AbsorbTimer" to="." method="_on_absorb_timer_timeout"]
[connection signal="area_entered" from="RadarArea" to="." method="_on_radar_area_area_entered"]
[connection signal="area_exited" from="RadarArea" to="." method="_on_radar_area_area_exited"]
[connection signal="timeout" from="RadarArea/PulseDurationTimer" to="." method="_on_pulse_duration_timer_timeout"]
[connection signal="timeout" from="RadarArea/CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
